--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,10 @@
 		<artifactId>metadata-extractor</artifactId>
 		<version>2.18.0</version>
 	</dependency>
+	<dependency>
+		<groupId>com.threeamigos</groupId>
+		<artifactId>common.util</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 </project>
