--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.threeamigos</groupId>
-  <artifactId>imageviewer</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>Image Viewer</name>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.threeamigos</groupId>
+	<artifactId>imageviewer</artifactId>
+  	version>0.0.1-SNAPSHOT</version>
+	<name>Image Viewer</name>
   
-  <dependencies>
-	<dependency>
-		<groupId>com.drewnoakes</groupId>
-		<artifactId>metadata-extractor</artifactId>
-		<version>2.18.0</version>
-	</dependency>
-	<dependency>
-		<groupId>com.threeamigos</groupId>
-		<artifactId>common.util</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</dependency>
-  </dependencies>
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.drewnoakes</groupId>
+			<artifactId>metadata-extractor</artifactId>
+			<version>2.18.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.threeamigos</groupId>
+			<artifactId>common.util</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
