--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.threeamigos</groupId>
 	<artifactId>imageviewer</artifactId>
-  	version>0.0.1-SNAPSHOT</version>
+  	<version>0.0.1-SNAPSHOT</version>
 	<name>Image Viewer</name>
   
 	<properties>
