--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,24 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.threeamigos</groupId>
+			<artifactId>common.util</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.drewnoakes</groupId>
 			<artifactId>metadata-extractor</artifactId>
 			<version>2.18.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.threeamigos</groupId>
-			<artifactId>common.util</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-imaging</artifactId>
+			<version>1.0-alpha3</version>
 		</dependency>
 	</dependencies>
 </project>
