--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.threeamigos</groupId>
 	<artifactId>pixelpeeper</artifactId>
   	<version>0.0.1-SNAPSHOT</version>
-	<name>Image Viewer</name>
+	<name>Pixel Peeper</name>
   
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
