--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.threeamigos</groupId>
-			<artifactId>common.util</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.10.1</version>
@@ -30,6 +25,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-imaging</artifactId>
 			<version>1.0-alpha3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.threeamigos</groupId>
+			<artifactId>common-utils</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	
