--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,28 @@
                             <mainClass>com.threeamigos.pixelpeeper.Main</mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.threeamigos.pixelpeeper.Main</mainClass>
+                        </manifest>
+                    </archive>
                     <outputDirectory>${project.basedir}</outputDirectory>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
             </plugin>
         </plugins>
